@@ -89,6 +89,7 @@ span.span_recipient-country recipient-country:nth-of-type(1)		{padding-top:40px;
 span.span_recipient-country recipient-country:last-of-type			{padding-bottom:40px;}
 span.span_recipient-country recipient-country span					{color:#444; font-size:14px; line-height:18px; display:inline-block; text-align:right; vertical-align:middle;}
 span.span_recipient-country recipient-country span.rec_code			{width:200px; min-height:25px; padding:10px 20px; border-right:1px solid #999;}
+span.span_recipient-country recipient-country span.rec_code:after	{content:attr(code); margin-left:10px; background-color:rgba(72,79,86,0.7); padding:2px 5px; border-radius:4px; font-size:11px; color:#FFF; white-space:nowrap;}
 span.span_recipient-country recipient-country span.rec_value		{color:#444; font-size:14px; text-align:right; margin-left:20px; max-width:36px; white-space:nowrap;}
 span.span_recipient-country recipient-country span.rec_bar			{background-color:#09f; width:100%; max-width:575px; height:24px; position:relative;}
 span.span_recipient-country recipient-country span.rec_bar::before	{content:""; background-color:rgba(17,46,105,0.1); width:575px; height:24px; z-index:-1; position:absolute; left:0; top:0;}
@@ -529,7 +530,7 @@ transaction sector	{display:none;}
 
 /*	Transaction table graphs
 	============================================= */
-.legend_wrap		{display:block; padding:0 15px; margin-bottom:30px; text-align:center;}
+.legend_wrap		{display:block; padding:10px 15px 0 15px; margin-bottom:20px; text-align:center;}
 span.legend			{display:inline-block; vertical-align:top; font-size:10px; color:#ccc; margin-right:15px;}
 span.legend:before	{content:""; display:inline-block; width:7px; height:7px; border-radius:4px; margin-right:5px;}
 
@@ -547,15 +548,15 @@ span.legend.type_11:before	{background-color:#AF77CF;}
 span.legend.type_12:before	{background-color:#5956B9;}
 span.legend.type_13:before	{background-color:#3AAEBE;}
 
-span.legend.type_1:after		{content:"INCOMING FUNDS";}
-span.legend.type_2:after		{content:"OUTGOING COMMITMENT";}
-span.legend.type_3:after		{content:"DISBURSEMENT";}
-span.legend.type_4:after		{content:"EXPENDITURE";}
-span.legend.type_5:after		{content:"INTEREST PAYMENT";}
-span.legend.type_6:after		{content:"LOAN REPAYMENT";}
-span.legend.type_7:after		{content:"REIMBURSEMENT";}
-span.legend.type_8:after		{content:"PURCHASE OF EQUITY";}
-span.legend.type_9:after		{content:"SALE OF EQUITY";}
+span.legend.type_1:after	{content:"INCOMING FUNDS";}
+span.legend.type_2:after	{content:"OUTGOING COMMITMENT";}
+span.legend.type_3:after	{content:"DISBURSEMENT";}
+span.legend.type_4:after	{content:"EXPENDITURE";}
+span.legend.type_5:after	{content:"INTEREST PAYMENT";}
+span.legend.type_6:after	{content:"LOAN REPAYMENT";}
+span.legend.type_7:after	{content:"REIMBURSEMENT";}
+span.legend.type_8:after	{content:"PURCHASE OF EQUITY";}
+span.legend.type_9:after	{content:"SALE OF EQUITY";}
 span.legend.type_10:after	{content:"CREDIT GUARANTEE";}
 span.legend.type_11:after	{content:"INCOMING COMMITMENT";}
 span.legend.type_12:after	{content:"OUTGOING PLEDGE";}
@@ -817,8 +818,8 @@ span.span_transaction_code_11 span.length	{left:200px;}
 
 /*	Chartist SVG
 	============================================= */
-.transactions_svg {display:block; width:920px; height:240px; margin:auto; margin-bottom:30px; padding-top:15px;}
-.transactions_svg_type_all	{padding-top:0; padding-bottom:40px;}
+.transactions_svg {display:block; width:920px; height:240px; margin:auto; margin-bottom:20px; padding-top:15px;}
+.transactions_svg_type_all	{padding-top:0; padding-bottom:45px;}
 .transactions_svg svg 		{overflow:visible;}
 
 .svg_line_transaction_type_1	{stroke:#09f;}
