@@ -7,6 +7,8 @@ Fix last of type padding for sector graphs with dac vocab
 Update hide toggles for transaction
 Don't display baseline outside of correct hierarchy in results
 Add legend to new graphs
+Update print-friendly css with new legend
+Display 2-digit country code in new recipient-country graph
 
 
 Development Portal (2019-01-08 shi)
